--- a/TicketsRUs.WebApp/Components/Pages/Home.razor
+++ b/TicketsRUs.WebApp/Components/Pages/Home.razor
@@ -1,4 +1,5 @@
 ﻿@page "/"
+@rendermode InteractiveServer
 
 <PageTitle>Counter</PageTitle>
 
@@ -10,17 +11,31 @@
 <button class="btn btn-primary" @onclick="DecreaseCount">Click me</button>
 
 @code {
-    private int currentCount = 0;
+    public static int currentCount = 0;
+    public static int gauge = 30;
+    public static int observabledown = 5;
+    @* public static int  *@
 
     private void IncrementCount()
     {
-        using var myActivuty = DiagnosticsTrace.ActionSource.StartActivity("add counter for activity 1");
+        System.Diagnostics.Metrics.Meter luris_meter = new (Meters.myServiceName, "2.0.6");
+        Meters.quantity.Add(1); //count
+        Meters.histogram_luris.Record(2);//histogram
+        Meters.UpDownLuris.Add(2);//updownCounter
         currentCount++;
+        gauge =+ 2;
+        observabledown =+ 5;
+        //using var myActivuty = DiagnosticsTrace.ActionSource.StartActivity("add counter for activity 1");
+        
     }
 
      private void DecreaseCount()
     {
-        using var myActivuty = DiagnosticsTrace.ActionSource2.StartActivity("add counter for activity 2");
+        System.Diagnostics.Metrics.Meter luris_meter = new (Meters.myServiceName, "2.0.6");
+        Meters.quantity.Add(1);
         currentCount--;
+        gauge =+ 2;
+        observabledown =+ 5;
+        //using var myActivuty = DiagnosticsTrace.ActionSource2.StartActivity("add counter for activity 2");
     }
 }
